--- a/src/app/cjlb/cjlb.component.html
+++ b/src/app/cjlb/cjlb.component.html
@@ -12,6 +12,9 @@
     <table class="my-table">
       <tr>
         <th>
+          序号
+        </th>
+        <th>
           成交时间
         </th>
         <th>
@@ -19,24 +22,6 @@
         </th>
         <th>
           委托编号
-        </th>
-        <th>
-          股票代码
-        </th>
-        <th>
-          股票名称
-        </th>
-        <th>
-          买卖方向
-        </th>
-        <th>
-          成交数量
-        </th>
-        <th>
-          成交均价
-        </th>
-        <th>
-          团队编号
         </th>
         <th>
           产品编号
@@ -47,8 +32,29 @@
         <th>
           投顾姓名
         </th>
+        <th>
+          股票代码
+        </th>
+        <th>
+          股票名称
+        </th>
+        <th>
+          成交数量
+        </th>
+        <th>
+          成交均价
+        </th>
+        <th>
+          买卖方向
+        </th>
+        <th>
+          团队编号
+        </th>
       </tr>
-      <tr *ngFor='let a of list;trackBy: stockId' class="{{a.appointTypeDesc === '买入'?'red':'green'}}">
+      <tr *ngFor='let a of list;let i = index;trackBy: stockId' class="{{a.appointTypeDesc === '买入'?'red':'green'}}">
+        <td>
+          {{i + 1}}
+        </td>
         <td>
           {{a.dealTime}}
         </td>
@@ -59,13 +65,19 @@
           {{a.appointOrderCode}}
         </td>
         <td>
+          {{a.productCode}}
+        </td>
+        <td>
+          {{a.accountCode}}
+        </td>
+        <td>
+          {{a.accountName}}
+        </td>
+        <td>
           {{a.stockCode}}
         </td>
         <td>
           {{a.stockName}}
-        </td>
-        <td>
-          {{a.appointTypeDesc}}
         </td>
         <td>
           {{a.dealCnt}}
@@ -74,16 +86,10 @@
           {{a.dealAvrPrice}}
         </td>
         <td>
+          {{a.appointTypeDesc}}
+        </td>
+        <td>
           {{a.teamCode}}
-        </td>
-        <td>
-          {{a.productCode}}
-        </td>
-        <td>
-          {{a.accountCode}}
-        </td>
-        <td>
-          {{a.accountName}}
         </td>
       </tr>
     </table>
