--- a/src/app/cpwtlb/cpwtlb.component.html
+++ b/src/app/cpwtlb/cpwtlb.component.html
@@ -6,6 +6,9 @@
     <table class="my-table">
       <tr>
         <th>
+          序号
+        </th>
+        <th>
           委托时间
         </th>
         <th>
@@ -60,7 +63,10 @@
           委托PK
         </th>
       </tr>
-      <tr *ngFor='let a of list' class="{{a.appointTypeDesc === '买入'?'red':'green'}}">
+      <tr *ngFor='let a of list;let i = index' class="{{a.appointTypeDesc === '买入'?'red':'green'}}">
+        <td>
+          {{i + 1}}
+        </td>
         <td>
           {{a.appointTime}}
         </td>
@@ -71,7 +77,7 @@
           {{a.accountCode}}
         </td>
         <td>
-          {{a.accountCode}}
+          {{a.accountName}}
         </td>
         <td class="wtbh">
           {{a.appointOrderCode}}
