--- a/src/app/ghlb/ghlb.component.html
+++ b/src/app/ghlb/ghlb.component.html
@@ -37,10 +37,10 @@
           可用资金
         </th>
         <th>
-          可归还资金
+          可提盈资金
         </th>
         <th>
-          本次归还资金
+          本次提盈资金
         </th>
         <th>
           投顾账号
