--- a/src/app/cclb/cclb.component.html
+++ b/src/app/cclb/cclb.component.html
@@ -5,8 +5,12 @@
     <div>
         <p>投顾账号：
             <span class="red">{{accountCode}}</span> 投顾姓名：
-            <span class="red">{{accountName}}</span>
+            <span class="red">{{accountName}}</span> 冻结资金：
+            <span class="red">{{lockScale}}</span>
         </p>
+        <div class="action-button">
+            <button (click)='closeALL()' [disabled]='list.length === 0'>一键平仓</button>
+        </div>
     </div>
     <div class="table-div my-scroll">
         <table class="my-table">
@@ -64,6 +68,9 @@
             </tr>
         </table>
     </div>
+    <div class="fpjyy-alert" *ngIf='confirm'>
+        <app-confirm [text]='confirmText' (active)='submitDelete($event)'></app-confirm>
+    </div>
     <div class="fpjyy-alert" *ngIf='resetAlert'>
         <div class="alert-title">
             平仓
@@ -77,12 +84,15 @@
                 </div>
                 <div class="add-down">
                     <div class="down" (click)='count(-1)'>-</div>
-                    <input class="input" type="number" placeholder="卖出价" [(ngModel)]='appointPrice' style="text-align: center">
+                    <input class="input" type="number" placeholder="卖出价" [(ngModel)]='appointPrice'
+                        style="text-align: center">
                     <div class="add" (click)='count(1)'>+</div>
                 </div>
                 <div class="green-red">
-                    <span class="green-left" (click)='selectPrice(stockHQ.lowPrice)'>跌停 {{stockHQ.lowPrice | toFixed}}</span>
-                    <span class="red-right" (click)='selectPrice(stockHQ.highPrice)'>涨停 {{stockHQ.highPrice | toFixed}}</span>
+                    <span class="green-left" (click)='selectPrice(stockHQ.lowPrice)'>跌停
+                        {{stockHQ.lowPrice | toFixed}}</span>
+                    <span class="red-right" (click)='selectPrice(stockHQ.highPrice)'>涨停
+                        {{stockHQ.highPrice | toFixed}}</span>
                 </div>
                 <div>
                     <input class="input" type="number" placeholder="卖出量" [(ngModel)]='appointCnt' (keyup)='inputCnt()'>
@@ -91,8 +101,10 @@
                 <div class="four-btn">
                     <div class="{{ccount === 'full'?'four-btn-active':''}}" (click)='selectCount("full")'>全仓</div>
                     <div class="{{ccount === 'half'?'four-btn-active':''}}" (click)='selectCount("half")'>半仓</div>
-                    <div class="{{ccount === '1/3full'?'four-btn-active':''}}" (click)='selectCount("1/3full")'>1/3仓</div>
-                    <div class="{{ccount === '1/4full'?'four-btn-active':''}}" (click)='selectCount("1/4full")'>1/4仓</div>
+                    <div class="{{ccount === '1/3full'?'four-btn-active':''}}" (click)='selectCount("1/3full")'>1/3仓
+                    </div>
+                    <div class="{{ccount === '1/4full'?'four-btn-active':''}}" (click)='selectCount("1/4full")'>1/4仓
+                    </div>
                 </div>
                 <div class="buy">
                     <div (click)='buy()'>平仓</div>
@@ -101,53 +113,63 @@
             <div class="right-div">
                 <p (click)='selectPrice(stockHQ.sellLevel.sellPrice05)'>
                     <span>卖5</span>
-                    <span class="{{HQColor(stockHQ.sellLevel.sellPrice05)}}">{{stockHQ.sellLevel.sellPrice05 | toFixed}}</span>
+                    <span
+                        class="{{HQColor(stockHQ.sellLevel.sellPrice05)}}">{{stockHQ.sellLevel.sellPrice05 | toFixed}}</span>
                     <span>{{stockHQ.sellLevel.sellVolume05 | numInt}}</span>
                 </p>
                 <p (click)='selectPrice(stockHQ.sellLevel.sellPrice04)'>
                     <span>卖4</span>
-                    <span class="{{HQColor(stockHQ.sellLevel.sellPrice04)}}">{{stockHQ.sellLevel.sellPrice04 | toFixed}}</span>
+                    <span
+                        class="{{HQColor(stockHQ.sellLevel.sellPrice04)}}">{{stockHQ.sellLevel.sellPrice04 | toFixed}}</span>
                     <span>{{stockHQ.sellLevel.sellVolume04 | numInt}}</span>
                 </p>
                 <p (click)='selectPrice(stockHQ.sellLevel.sellPrice03)'>
                     <span>卖3</span>
-                    <span class="{{HQColor(stockHQ.sellLevel.sellPrice03)}}">{{stockHQ.sellLevel.sellPrice03 | toFixed}}</span>
+                    <span
+                        class="{{HQColor(stockHQ.sellLevel.sellPrice03)}}">{{stockHQ.sellLevel.sellPrice03 | toFixed}}</span>
                     <span>{{stockHQ.sellLevel.sellVolume03 | numInt}}</span>
                 </p>
                 <p (click)='selectPrice(stockHQ.sellLevel.sellPrice02)'>
                     <span>卖2</span>
-                    <span class="{{HQColor(stockHQ.sellLevel.sellPrice02)}}">{{stockHQ.sellLevel.sellPrice02 | toFixed}}</span>
+                    <span
+                        class="{{HQColor(stockHQ.sellLevel.sellPrice02)}}">{{stockHQ.sellLevel.sellPrice02 | toFixed}}</span>
                     <span>{{stockHQ.sellLevel.sellVolume02 | numInt}}</span>
                 </p>
                 <p (click)='selectPrice(stockHQ.sellLevel.sellPrice01)'>
                     <span>卖1</span>
-                    <span class="{{HQColor(stockHQ.sellLevel.sellPrice01)}}">{{stockHQ.sellLevel.sellPrice01 | toFixed}}</span>
+                    <span
+                        class="{{HQColor(stockHQ.sellLevel.sellPrice01)}}">{{stockHQ.sellLevel.sellPrice01 | toFixed}}</span>
                     <span>{{stockHQ.sellLevel.sellVolume01 | numInt}}</span>
                 </p>
                 <p class="line"></p>
                 <p (click)='selectPrice(stockHQ.buyLevel.buyPrice01)'>
                     <span>买1</span>
-                    <span class="{{HQColor(stockHQ.buyLevel.buyPrice01)}}">{{stockHQ.buyLevel.buyPrice01 | toFixed}}</span>
+                    <span
+                        class="{{HQColor(stockHQ.buyLevel.buyPrice01)}}">{{stockHQ.buyLevel.buyPrice01 | toFixed}}</span>
                     <span>{{stockHQ.buyLevel.buyVolume01 | numInt}}</span>
                 </p>
                 <p (click)='selectPrice(stockHQ.buyLevel.buyPrice02)'>
                     <span>买2</span>
-                    <span class="{{HQColor(stockHQ.buyLevel.buyPrice02)}}">{{stockHQ.buyLevel.buyPrice02 | toFixed}}</span>
+                    <span
+                        class="{{HQColor(stockHQ.buyLevel.buyPrice02)}}">{{stockHQ.buyLevel.buyPrice02 | toFixed}}</span>
                     <span>{{stockHQ.buyLevel.buyVolume02 | numInt}}</span>
                 </p>
                 <p (click)='selectPrice(stockHQ.buyLevel.buyPrice03)'>
                     <span>买3</span>
-                    <span class="{{HQColor(stockHQ.buyLevel.buyPrice03)}}">{{stockHQ.buyLevel.buyPrice03 | toFixed}}</span>
+                    <span
+                        class="{{HQColor(stockHQ.buyLevel.buyPrice03)}}">{{stockHQ.buyLevel.buyPrice03 | toFixed}}</span>
                     <span>{{stockHQ.buyLevel.buyVolume03 | numInt}}</span>
                 </p>
                 <p (click)='selectPrice(stockHQ.buyLevel.buyPrice04)'>
                     <span>买4</span>
-                    <span class="{{HQColor(stockHQ.buyLevel.buyPrice04)}}">{{stockHQ.buyLevel.buyPrice04 | toFixed}}</span>
+                    <span
+                        class="{{HQColor(stockHQ.buyLevel.buyPrice04)}}">{{stockHQ.buyLevel.buyPrice04 | toFixed}}</span>
                     <span>{{stockHQ.buyLevel.buyVolume04 | numInt}}</span>
                 </p>
                 <p (click)='selectPrice(stockHQ.buyLevel.buyPrice05)'>
                     <span>买5</span>
-                    <span class="{{HQColor(stockHQ.buyLevel.buyPrice05)}}">{{stockHQ.buyLevel.buyPrice05 | toFixed}}</span>
+                    <span
+                        class="{{HQColor(stockHQ.buyLevel.buyPrice05)}}">{{stockHQ.buyLevel.buyPrice05 | toFixed}}</span>
                     <span>{{stockHQ.buyLevel.buyVolume05 | numInt}}</span>
                 </p>
             </div>
