--- a/src/app/fplb/fplb.component.css
+++ b/src/app/fplb/fplb.component.css
@@ -26,7 +26,7 @@
     left: -200px;
     text-align: center;
     margin-top: 150px;
-    background: #ad3333;
+    background: #3186c7;
     color: #fff;
 }
 
