--- a/src/app/head/head.component.css
+++ b/src/app/head/head.component.css
@@ -31,7 +31,7 @@ span {
     left: -250px;
     text-align: center;
     margin-top: 150px;
-    background: #ad3333;
+    background: #3186c7;
     color: #fff;
 }
 
