白名单修改

--- a/src/app/zhxx/zhxx.component.css
+++ b/src/app/zhxx/zhxx.component.css
@@ -1,60 +1,64 @@
-
-
 .alert-div {
-    width: 550px;
-    height: 310;
-    background: #fff;
-    margin-left: 50%;
-    left: -250px;
-    position: relative;
-    flex-wrap: wrap;
-    overflow-y: auto;
-    padding: 5px 10px;
+  width: 550px;
+  height: 310;
+  background: #fff;
+  margin-left: 50%;
+  left: -250px;
+  position: relative;
+  flex-wrap: wrap;
+  overflow-y: auto;
+  padding: 5px 10px;
 }
 
 .alert-title {
-    width: 550px;
-    height: 50px;
-    line-height: 50px;
-    position: relative;
-    margin-left: 50%;
-    left: -250px;
-    text-align: center;
-    margin-top: 150px;
-    background: #3186c7;
-    color: #fff;
+  width: 550px;
+  height: 50px;
+  line-height: 50px;
+  position: relative;
+  margin-left: 50%;
+  left: -250px;
+  text-align: center;
+  margin-top: 150px;
+  background: #3186c7;
+  color: #fff;
 }
 
 .close-btn {
-    float: right;
-    width: 25px;
-    position: absolute;
-    margin-left: 204px;
-    margin-top: 13px;
-    cursor: pointer;
+  float: right;
+  width: 25px;
+  position: absolute;
+  margin-left: 204px;
+  margin-top: 13px;
+  cursor: pointer;
 }
 
 .flex-alert {
-    display: flex;
-    height: 40px;
-    line-height: 40px;
-    margin-top: 10px;
-    font-size: 14px;
-    width: 535px;
+  display: flex;
+  height: 40px;
+  line-height: 40px;
+  margin-top: 10px;
+  font-size: 14px;
+  width: 535px;
 }
 
 .flex-name {
-    flex: 2;
+  flex: 2;
 }
 
 .flex-content {
-    flex: 3;
+  flex: 3;
+}
+.flex-content2-input,
+.flex-content input,
+.flex-content select {
+  width: 90%;
+  height: 30px;
+  border: solid 1px #ccc;
+  border-radius: 3px;
+  padding: 0 3px;
 }
 
-.flex-content input, .flex-content select {
-    width: 90%;
-    height: 30px;
-    border: solid 1px #ccc;
-    border-radius: 3px;
-    padding: 0 3px;
+.flex-content2-input{
+    width: 145px;
+    margin-right: 10px;
 }
